--- a/src/components/ui/footer.astro
+++ b/src/components/ui/footer.astro
@@ -34,8 +34,8 @@ const linkItems = [
 ];
 ---
 
-<footer class={cn("bg-accent/50 py-3 text-sm", className)}>
-  <div class="flex justify-between items-center w-full md:w-2/3 mx-auto">
+<footer class={cn("bg-accent/50 px-4 md:px-0 py-3 text-sm", className)}>
+  <div class="flex justify-between items-center w-full md:w-6/8 mx-auto">
     <div class="flex flex-col">
       <span>
         Copyright &copy; {copyrightYear}
