--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,7 +8,11 @@ import { getBlogSlugs } from "@/lib/blog-utils";
 const posts = await getCollection("blog");
 ---
 
-<BaseLayout title="Blog - ARV" description="Blogs written by ARV.">
+<BaseLayout
+  title="Blog - ARV"
+  description="Blogs written by ARV."
+  nav={{sticky: true}}
+>
   <main class="flex-1 w-full md:w-2/3 mx-auto px-4 pb-8">
     <h1 class="font-heading text-4xl font-bold mb-8 md:text-center">
       Latest Blog Posts
