--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,7 +56,7 @@ const info = await loadInfoData();
 
 <BaseLayout nav={{sticky: true}} title="Home - ARV">
   <div
-    class="w-full md:w-2/3 mx-auto gap-10 flex flex-1 flex-col items-center justify-center px-4 py-8 text-center"
+    class="w-full md:w-2/3 mx-auto gap-10 flex flex-1 flex-col items-center justify-center px-4 md:px-0 py-8 text-center"
   >
     <div class="flex flex-col items-center gap-5">
       <Image
