--- a/src/pages/journal/index.astro
+++ b/src/pages/journal/index.astro
@@ -33,7 +33,11 @@ const years: number[] = Object.keys(groupedJournals)
   .sort((a, b) => b - a);
 ---
 
-<BaseLayout title="Journal - ARV" description="Weekly Journals written by ARV.">
+<BaseLayout
+  title="Journal - ARV"
+  description="Weekly Journals written by ARV."
+  nav={{sticky: true}}
+>
   <main class="flex-1 w-full md:w-2/3 mx-auto px-4 pb-8 text-center">
     <h1 class="font-heading text-4xl font-bold mb-8">Weekly Journals</h1>
     <div>
