--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -64,24 +64,20 @@ const { Content } = await render(project);
     },
   }}
 >
-  <div class="flex flex-col flex-1 items-center justify-center">
-    <FrontmatterCard data={project.data} backPageUrl="/v2/projects" />
-    {
-      nestedPages && (
-        <div>
-          <p class="text-bold text-2xl text-center my-4">Related Pages</p>
-          <NestedPagesList
-            pages={nestedPages}
-            class="border rounded border-outline p-4"
-          />
-        </div>
-      )
-    }
+  <FrontmatterCard data={project.data} backPageUrl="/v2/projects" />
+  {nestedPages && (
+      <section>
+        <h2 class="font-bold text-2xl text-center my-4">Related Pages</h2>
+        <NestedPagesList
+          pages={nestedPages}
+          class="border rounded border-outline p-4"
+        />
+      </section>
+    )}
 
-    <article class="mt-10 w-full">
-      <Prose class="max-w-auto w-full custom-prose">
-        <Content />
-      </Prose>
-    </article>
-  </div>
+  <article class="mt-10 w-full">
+    <Prose class="max-w-auto w-full custom-prose">
+      <Content />
+    </Prose>
+  </article>
 </BaseLayout>
