--- a/src/components/ui/footer.astro
+++ b/src/components/ui/footer.astro
@@ -34,8 +34,10 @@ const linkItems = [
 ];
 ---
 
-<footer class={cn("bg-accent/50 px-4 md:px-0 py-3 text-sm", className)}>
-  <div class="flex justify-between items-center w-full md:w-3/4 mx-auto">
+<footer class={cn("bg-accent/70 px-4 md:px-0 py-3 text-sm", className)}>
+  <div
+    class="flex justify-between items-center w-full md:w-2/3 xl:w-3/5 mx-auto"
+  >
     <div class="flex flex-col">
       <span>
         Copyright &copy; {copyrightYear}
@@ -49,8 +51,7 @@ const linkItems = [
       </span>
     </div>
     <div class="flex">
-      {
-        linkItems.map((item) => (
+      {linkItems.map((item) => (
           <Button
             href={item.url}
             size="icon"
@@ -59,8 +60,7 @@ const linkItems = [
           >
             <Icon name={item.icon} title={item.title} />
           </Button>
-        ))
-      }
+        ))}
     </div>
   </div>
 </footer>
