--- a/src/pages/journal/index.astro
+++ b/src/pages/journal/index.astro
@@ -11,7 +11,7 @@ type Journal = CollectionEntry<"journal">;
 
 // 1. Sort the journals by date (descending)
 const sortedJournals: Journal[] = journals.sort(
-  (a, b) => b.data.pubDate.getTime() - a.data.pubDate.getTime(),
+  (a, b) => b.data.pubDate.getTime() - a.data.pubDate.getTime()
 );
 
 // 2. Group journals by Year
@@ -24,7 +24,7 @@ const groupedJournals: Record<number, Journal[]> = sortedJournals.reduce(
     acc[year].push(journal);
     return acc;
   },
-  {} as Record<number, Journal[]>,
+  {} as Record<number, Journal[]>
 );
 
 // 3. Get the years as an array and sort them descending
@@ -41,8 +41,7 @@ const years: number[] = Object.keys(groupedJournals)
   <div class="text-center">
     <h1 class="font-heading text-4xl font-bold mb-8">Weekly Journals</h1>
     <div>
-      {
-        years.map((year) => (
+      {years.map((year) => (
           <section class="mt-8">
             <h2 class="font-heading text-3xl font-bold mb-5">{year}</h2>
             <div class="flex flex-col items-center">
@@ -56,8 +55,7 @@ const years: number[] = Object.keys(groupedJournals)
               ))}
             </div>
           </section>
-        ))
-      }
+        ))}
     </div>
   </div>
 </BaseLayout>
