--- a/src/layouts/base-layout.astro
+++ b/src/layouts/base-layout.astro
@@ -4,6 +4,7 @@ import type { HTMLAttributes } from "astro/types";
 import { SEO, type SEOProps } from "astro-seo";
 import Footer from "@/components/ui/footer.astro";
 import Navbar from "@/components/ui/navbar.astro";
+import { cn } from "@/lib/utils";
 import themeInit from "@/scripts/theme-init.js?raw";
 
 interface Props extends HTMLAttributes<"body"> {
@@ -61,10 +62,10 @@ const {
   <body class="relative w-full min-h-screen flex flex-col" {...props}>
     <Navbar sticky={nav.sticky} />
     <main
-      class:list={[
+      class={cn(
         "flex-1 w-full md:w-2/3 xl:w-3/5 mx-auto px-4 md:px-0 py-8",
         className,
-      ]}
+      )}
     >
       <slot />
     </main>
